# taggedalgebraic

./: meson.build
source/: taggedalgebraic.d
source/taggedalgebraic/: meson.build
